--- a/overlay/packages/apps/Aperture/app/src/main/res/values/config.xml
+++ b/overlay/packages/apps/Aperture/app/src/main/res/values/config.xml
@@ -26,6 +26,7 @@
         <item>org.lineageos.snap</item>
         <item>org.lineageos.aperture</item>
         <item>org.lineageos.aperture.dev</item>
+        <item>org.pixelexperience.faceunlock</item>
     </string-array>
 
     <!-- The list of package IDs that are not allowed to use aux cameras. -->
