tulip: Disable NearbyMessagingService
Change-Id: Ib3f923bf8742bf6480d278fb21a873ddc1290484

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -434,5 +434,10 @@
 
      <!-- Whether device supports in-display fingerprint -->
      <bool name="config_supportsUdfps">false</bool>
-    
+     
+    <!-- The list of components which should be automatically disabled for a specific device. -->
+    <string-array name="config_deviceDisabledComponents" translatable="false">
+        <item>com.google.android.gms/com.google.android.gms.nearby.messages.service.NearbyMessagesService</item>
+    </string-array>
+
 </resources>
