--- a/overlay/packages/apps/Aperture/app/src/main/res/values/config.xml
+++ b/overlay/packages/apps/Aperture/app/src/main/res/values/config.xml
@@ -17,4 +17,29 @@
         <item>101</item>
         <item>120</item>
     </string-array>
+
+    <!-- The list of package IDs that are allowed to use aux cameras.
+         NOTE: If this list is empty then all apps will be able to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageAllowList" translatable="false">
+        <item>com.android.camera</item>
+        <item>org.codeaurora.snapcam</item>
+        <item>org.lineageos.snap</item>
+        <item>org.lineageos.aperture</item>
+        <item>org.lineageos.aperture.dev</item>
+    </string-array>
+
+    <!-- The list of package IDs that are not allowed to use aux cameras. -->
+    <string-array name="config_cameraAuxPackageExcludeList" translatable="false">
+        <item>org.mozilla.firefox</item>
+        <item>org.telegram.messenger</item>
+        <item>org.thunderdog.challegram</item>
+        <item>com.intsig.camscanner</item>
+        <item>com.instagram.android</item>
+        <item>com.lazada.android</item>
+        <item>com.microsoft.emmx</item>
+        <item>com.tokopedia.tkpd</item>
+        <item>com.tokopedia.sellerapp</item>
+        <item>com.whatsapp</item>
+        <item>nekox.messenger</item>
+    </string-array>
 </resources>
