tulip: Set config_supportsUdfps to false Our device doesnt have UDFPS

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -435,4 +435,7 @@
          fading edges is prohibitively expensive on most GPUs. -->
     <bool name="config_ui_enableFadingMarquee">true</bool>
 
+     <!-- Whether device supports in-display fingerprint -->
+     <bool name="config_supportsUdfps">false</bool>
+    
 </resources>
